Rename package from intercom-sidebar to intercom-proxy

--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "intercom-sidebar",
+  "name": "intercom-proxy",
   "version": "1.0.0",
+  "description": "Intercom Canvas integration",
   "main": "index.js",
   "type": "module",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   }
 }
